# xiloeditor

./: README.md  mkdocs.yml  pyproject.toml
docs/: Xiloeditor.md  index.md
examples/xiloeditor_example/: pyproject.toml
examples/xiloeditor_example/src/: main.py
src/flutter/xiloeditor/: README.md  pubspec.yaml
src/flutter/xiloeditor/lib/: xiloeditor.dart
src/flutter/xiloeditor/lib/src/: create_control.dart  xiloeditor.dart
src/xiloeditor/: __init__.py  xiloeditor.py
src/xiloeditor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
